--- a/index.html
+++ b/index.html
@@ -72,14 +72,14 @@
             </small>
           </p>
           <ul>
-            <li>
+            <li title="Twitter">
               <!-- <a href="#"><ion-icon name="logo-twitter"></ion-icon></a> -->
               🐦
             </li>
-            <li>📷</li>
-            <li>📕</li>
-            <li>👻</li>
-            <li>IN</li>
+            <li title="Instagram">📷</li>
+            <li title="facebook">📕</li>
+            <li title="Snapchat">👻</li>
+            <li title="linkedin">IN</li>
           </ul>
         </div>
       </aside>
@@ -97,7 +97,7 @@
                 Working as a <strong>Quality Analyst</strong> and looking forward to
                 give more to this technical community.
               </h2>
-              <p class="hero-btn"><a href="#">View Portfolio</a></p>
+              <p class="hero-btn"><a href="https://myportfolio-a-fantasista.netlify.app/">View Portfolio</a></p>
             </div>
             <div class="hero-img">
               <img
@@ -313,12 +313,12 @@
           <div class="contact-form">
             <div class="contact-info">
               <div class="contact">
-                <span>ℹ️</span>
-                <p>info@domain.com</p>
+                <span>✉️</span>
+                <p>amit.chincholkar@yahoo.com</p>
               </div>
               <div class="contact">
                 <span>🗾</span>
-                <p>Jaitala Nagpur-Maharastra-India</p>
+                <p>Jaitala Nagpur-Maharastra <br>India</p>
               </div>
               <div class="contact">
                 <span>📞</span>
