--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 
         <section id="containter-dev" class="containter">
           <div class="dev-btn">
-            <button class="to-MyApp">Go</button>
+            <button class="to-MyApp"><a href="#">Go</a></button>
           </div>
         </section>
 
