new portfolio files

--- a/index.html
+++ b/index.html
@@ -4,342 +4,167 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./stylesheet/style.css" />
-    <link rel="stylesheet" href="./stylesheet/general.css" />
-    <title>Document</title>
+    <meta
+      name="description"
+      content="My-Portfolio will make familier with me and creates a bond that will last long forever."
+    />
+
+    <link rel="stylesheet" href="./stylesheets/style-portfolio.css" />
+    <link rel="stylesheet" href="./stylesheets/common.css" />
+
+    <title>Explore aMyth</title>
   </head>
   <body>
-    <header class="header-container">
-      <a href="#" class="logo">R📍P</a>
-      <nav class="main-nav">
-        <ul class="main-nav-list">
-          <li><a href="#" class="main-nav-link" id="nav-link1">BLUE</a></li>
-          <li><a href="#" class="main-nav-link" id="nav-link2">BLACK</a></li>
-          <li><a href="#" class="main-nav-link" id="nav-link3">RED</a></li>
-        </ul>
-      </nav>
-      <div class="main-menu">
-        <button class="menu-btn">click</button>
+    <header>
+      <div class="logo-box">
+        <a href="/" class="logo-rip header-link" target="_self"
+          >☠️<strong>RIP</strong></a
+        >
+        <a
+          class="btn-resume"
+          href="./docs/amit_Chincholkar-dev.pdf.pdf"
+          target="_blank"
+        >
+          Resume
+        </a>
+      </div>
+      <div class="master-header-box">
+        <h1>
+          <a
+            href="https://www.linkedin.com/in/amit-chincholkar-12407715b/"
+            class="logo-ac header-link"
+            target="_blank"
+            >Hi, I am <strong>Amit</strong> Chincholkar</a
+          >
+        </h1>
+        <h2>
+          I am a <strong>Software Engineer</strong> based in Nagpur, India.
+        </h2>
+
+        <p>
+          I am Investing in me, a great growling energy that you'd be perfectly
+          happy to hold even if market shuts down for 10 years. <br />
+          A <strong>Tech Savy,</strong> looking forward to contribute more to
+          this technical community.
+          <br />
+          <br />
+          <em>I impliment the Fantacies - @fantasista😈</em>
+        </p>
       </div>
     </header>
-    <main class="main">
-      <aside class="hero-aside hero">
-        <div class="author">
-          <img src="./images/pro-pick2.jpg" alt="profile-picture" class="pro-pick" />
-          <h1 class="pro-name">Amit R. Chincholkar</h1>
-          <span class="position">
-            <a href="#">Devoloper</a> In Nagpur-Maharastra-India
-          </span>
+    <main>
+      <section class="section-features">
+        <div class="project_box">
+          <h2>Frontendo</h2>
         </div>
-        <nav>
-          <div>
-            <ul class="aside-menu">
-              <li class="aside-list">
-                <a class="aside-link" id="home-btn" href="#containter-home">Home</a>
-              </li>
-              <li class="aside-list">
-                <a class="aside-link" id="about-btn" href="#containter-about">ABOUT</a>
-              </li>
-              <li class="aside-list">
-                <a class="aside-link" id="Dev-btn" href="#containter-dev">DEVELOPMENTS</a>
-              </li>
-              <li class="aside-list">
-                <a class="aside-link" id="skills-btn" href="#containter-skills">SKILLS</a>
-              </li>
-              <li class="aside-list">
-                <a class="aside-link" id="edu-btn" href="#containter-edu">EDUCATION</a>
-              </li>
-              <li class="aside-list">
-                <a class="aside-link" id="work-btn" href="#containter-work">WORK</a>
-              </li>
-              <li class="aside-list">
-                <a class="aside-link" id="contact-btn" href="#containter-contact">CONTACT</a>
-              </li>
-            </ul>
-          </div>
-        </nav>
-        <div class="hero-aside-footer">
+        <div class="project_box">
+          <h2>BackEndo</h2>
+        </div>
+      </section>
+      <section class="section-Bio">
+        <div class="row">
+          <img
+            class="me-pick"
+            src="./images/pro-pick2.jpg"
+            alt="Profile Picture"
+          />
+          <h2>Hi, I'm Amit</h2>
+
           <p>
-            <small
-              >©️Copyright
-              <script>
-                document.write(new Date().getFullYear());
-              </script>
-              All rights reserved <br />
-              This webisite is made <br />
-              with 💗 by
-              <span>Amit</span>
-            </small>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima
+            deserunt doloremque enim rerum velit, praesentium temporibus.
+            Sapiente excepturi ratione voluptatem veritatis.
           </p>
-          <ul>
-            <li title="Twitter">
-              <!-- <a href="#"><ion-icon name="logo-twitter"></ion-icon></a> -->
-              🐦
-            </li>
-            <li title="Instagram">📷</li>
-            <li title="facebook">📕</li>
-            <li title="Snapchat">👻</li>
-            <li title="linkedin">IN</li>
-          </ul>
+          <p>
+            Sint veniam perferendis dolorem porro iste fugiat in obcaecati
+            commodi quia atque mollitia vel natus sapiente a assumenda, aperiam
+            ex tempore fugit debitis quibusdam suscipit? Reiciendis deserunt
+            quod aperiam voluptas sequi recusandae asperiores, enim similique
+            quo quae possimus quibusdam, tempore unde obcaecati autem ex earum
+            beatae a delectus. Odio, dolor praesentium. Temporibus dolorum sequi
+            voluptatum quas, deserunt aspernatur.
+          </p>
+          <p>
+            A debitis pariatur commodi perferendis tempora possimus itaque, quo
+            aut inventore nobis similique accusamus ipsum cumque aspernatur odit
+            distinctio eligendi ipsa quaerat? Perspiciatis.
+          </p>
+          <p>
+            qui reiciendis repellat, iure accusantium temporibus doloribus
+            necessitatibus, accusamus, fuga non officiis! Odit repellat labore
+            dolorum doloremque facere?
+          </p>
+          <p>so, stay connected!</p>
+          <img class="sign" src="./images/signature.png" alt="signature" />
         </div>
-      </aside>
-      <aside class="hero-main hero">
-        <section id="containter-home" class="containter">
-          <div class="home-main">
-            <div class="hero-InnerText">
-              <h1 class="hero-heading">
-                Hi! <br />
-                I'm Amit
-              </h1>
+      </section>
+      <section class="section-work">
+        <div class="lanes">
+          <div class="lane-left">
+            <article>
               <h2>
-                I am Investing in me, a great growling energy that you'd be
-                perfectly happy to hold even if market shuts down for 10 years.
-                Working as a <strong>Quality Analyst</strong> and looking forward to
-                give more to this technical community.
+                I build & <br />
+                design stuff
               </h2>
-              <p class="hero-btn"><a href="https://myportfolio-a-fantasista.netlify.app/">View Portfolio</a></p>
-            </div>
-            <div class="hero-img">
-              <img
-                src="./images/astronaut.png"
-                class="astronaut-img"
-                alt="astronaut"
-              />
-            </div>
+              <p>
+                Open source projects, web apps and <br />
+                experimentals.
+              </p>
+            </article>
+            <a href="#" class="link">See my work &rarr;</a>
           </div>
-        </section>
-
-        <section id="containter-about" class="containter">
-          <div class="hero-about hero-padding">
-            <span class="about-meta meta">About Me</span>
-            <h2 class="about-heading hero-heading-2">Who am I?</h2>
-            <p class="hero-para">
-              <strong>Hi I'm Amit Chincholkar</strong>
-              On her way she met a copy. The copy warned the Little Blind Text,
-              that where it came from it would have been rewritten a thousand
-              times and everything that was left from its origin would be the
-              word "and" and the Little Blind Text should turn around and return
-              to its own, safe country.
-            </p>
-
-            <div class="services-row">
-              <div class="services">
-                <span>🎏</span>
-                <h2>Graphic Design</h2>
-              </div>
-              <div class="services">
-                <span>🕸️</span>
-                <h2>Web Design</h2>
-              </div>
-              <div class="services">
-                <span>🍎</span>
-                <h2>Softwere</h2>
-              </div>
-              <div class="services">
-                <span>🈸</span>
-                <h2>Application</h2>
-              </div>
-            </div>
-            <div class="hire">
+          <div class="lane-right">
+            <article>
               <h2>
-                I am happy to know you<br />
-                that 0+ projects done sucessfully!
+                I explore and <br />
+                make my own Philosophies
               </h2>
-              <p class="about-btn"><a href="#">Hire Me</a></p>
-            </div>
+              <p>
+                Traveling, Art and <br />
+                Space
+              </p>
+            </article>
+            <a
+              href="https://instagram.com/a_fantasista?igshid=ZDc4ODBmNjlmNQ=="
+              target="_blank"
+              class="link"
+              >Explore my fantasies &rarr;</a
+            >
           </div>
-        </section>
-
-        <section id="containter-dev" class="containter">
-          <div class="dev-btn">
-            <button class="to-MyApp"><a href="#">Go</a></button>
-          </div>
-        </section>
-
-        <section id="containter-skills" class="containter">
-          <div class="hero-skills hero-padding">
-            <span class="skills-meta meta">My Specialty</span>
-            <h2 class="skills-heading hero-heading-2">My Skills</h2>
-            <p class="hero-para">
-              The Big Oxmox advised her not to do so, because there were
-              thousands of bad Commas, wild Question Marks and devious Semikoli,
-              but the Little Blind Text didn't listen. She packed her seven
-              versalia, put her initial into the belt and made herself on the
-              way.
-            </p>
-
-            <div class="skill-cells">
-              <div class="progress">
-                <h2>Java 🍵</h2>
-                <span>70%</span>
-                <progress class="progress-bar" value="70" max="100"></progress>
-              </div>
-              <div class="progress">
-                <h2>MySQL 🐬</h2>
-                <span>40%</span>
-                <progress class="progress-bar" value="40" max="100"></progress>
-              </div>
-              <div class="progress">
-                <h2>JavaScript 🧬</h2>
-                <span>80%</span>
-                <progress class="progress-bar" value="80" max="100"></progress>
-              </div>
-              <div class="progress">
-                <h2>HTML 💀</h2>
-                <span>90%</span>
-                <progress class="progress-bar" value="90" max="100"></progress>
-              </div>
-              <div class="progress">
-                <h2>CSS 💥</h2>
-                <span>60%</span>
-                <progress class="progress-bar" value="60" max="100"></progress>
-              </div>
-              <div class="progress">
-                <h2>React ⚛️</h2>
-                <span>30%</span>
-                <progress class="progress-bar" value="30" max="100"></progress>
-              </div>
-            </div>
-          </div>
-        </section>
-
-        <section id="containter-edu" class="containter">
-          <div class="hero-education hero-padding">
-            <span class="education-meta meta">My Education</span>
-            <h2 class="education-heading hero-heading-2">My Education</h2>
-            <div class="collaps-panel">
-            <div class="collapsed " id="collapsed-1"><h3 id="edu-1">BCCA</h3><span id="col-icon-1">➕</span></div>
-            <div class="panel-box-1 hide">
-              <table class="panel-row">
-                <tr class="col col-1">
-                  <th>Year</th>
-                  <th>Degree</th>
-                  <th>Univercity</th>
-                  <th>Grades</th>
-                </tr>
-                <tr class=" col col-2">
-                  <td>2019</td>
-                  <td>BCCA</td>
-                  <td>RTMNU</td>
-                  <td>5.6</td>
-                </tr>
-              </table>
-            </div>
-            <div class="collapsed" id="collapsed-2"><h3 id="edu-2">HSC</h3><span id="col-icon-2">➕</span></div>
-            <div class="panel-box-2 hide">
-              <table class="panel-row">
-                <tr class="col col-1">
-                  <th>Year</th>
-                  <th>Degree</th>
-                  <th>Univercity</th>
-                  <th>Percentage</th>
-                </tr>
-                <tr class=" col col-2">
-                  <td>2014</td>
-                  <td>HSC</td>
-                  <td>MSBTE</td>
-                  <td>55%</td>
-                </tr>
-            </table>
-            </div>
-            <div class="collapsed " id="collapsed-3"><h3 id="edu-3">SSC</h3><span id="col-icon-3">➕</span></div>
-            <div class="panel-box-3 hide">
-              <table class="panel-row">
-                <tr class="col col-1">
-                  <th>Year</th>
-                  <th>Degree</th>
-                  <th>Univercity</th>
-                  <th>Percentage</th>
-                </tr>
-                <tr class=" col col-2">
-                  <td>2014</td>
-                  <td>SSC</td>
-                  <td>MSBTE</td>
-                  <td>68%</td>
-                </tr>
-              </table>
-            </div>
-          </div>
-        </section>
-
-        <section id="containter-work" class="containter">
-          <div class="hero-work hero-padding">
-            <span class="work-meta meta">Experience</span>
-            <h2 class="work-heading hero-heading-2">My Work Experience</h2>
-            <div class="timeline-box">
-              <div class="timeline1 work-timeline">
-                <span class="timeline-period">June 2021 - Current</span>
-                <div class="timeline-label">
-                <span>Bizmatics: A Harris Computer Company</span>
-                <h3>QA Executive (Software Testing)</h3>
-                <ul>
-                  <li>Manual Testing</li>
-                  <li>Automation Testing</li>
-                  <li>Software - Prognocis</li>
-                </ul>
-              </div>
-              </div>
-              <div class="timeline2 work-timeline">
-                <span class="timeline-period">Aug 2019 - Sep 2021</span>
-                <div class="timeline-label">
-                <span>Bizmatics Pvt. Ltd.</span>
-                <h3>Account Analyst</h3>
-                <ul>
-                  <li>Denial Management</li>
-                  <li>AR Calling Testing</li>
-                  <li>Client Handling</li>
-                </ul>
-              </div>
-              </div>
-              <div class="timeline3 work-timeline">
-                <span class="timeline-period">July 2017 - Aug 2019</span>
-                <div class="timeline-label">
-                <span>Ascent Business Solutions</span>
-                <h3>Account Analyst</h3>
-                <ul>
-                  <li>Denial Management</li>
-                  <li>AR Calling Testing</li>
-                  <li>Client Handling</li>
-                </ul>
-              </div>
-              </div>
-            </div>
-        </section>
-
-        <section id="containter-contact" class="containter">
-          <div class="hero-work hero-padding">
-            <span class="work-meta meta">Contact</span>
-            <h2 class="work-heading hero-heading-2">Contact Me</h2>
-          <div class="contact-form">
-            <div class="contact-info">
-              <div class="contact">
-                <span>✉️</span>
-                <p>amit.chincholkar@yahoo.com</p>
-              </div>
-              <div class="contact">
-                <span>🗾</span>
-                <p>Jaitala Nagpur-Maharastra <br>India</p>
-              </div>
-              <div class="contact">
-                <span>📞</span>
-                <p>+91 9158060876</p>
-              </div>
-            </div>
-            <div class="form-fields">
-              <form action="" class="response-form">
-              <input type="text" placeholder="Name"/>
-              <input type="email" placeholder="Email"/>
-              <input type="text" placeholder="Subject"/>
-              <textarea type="text" placeholder="Message"></textarea>
-              <button type="#" class="form-btn">Submit</button>
-            </form>
-            </div>
-          </div>
-        </section>
-
-        <section id="containter-thanks" class="containter"></section>
-      </aside>
+        </div>
+      </section>
     </main>
-    <script src="./scripts/script.js"></script>
+    <footer>
+      <div class="logo-box">
+        <a href="/" class="logo-rip footer-link" target="_self"
+          >☠️<strong>RIP</strong></a
+        >
+        <button type="button" class="btn-resume">Resume</button>
+      </div>
+      <div class="footer-text">
+        <p>
+          Built with ❤️ in Orange city Nagpur, Maharashtra, India <br />
+          <small
+            >©️ <span class="year">0000</span> by Amit Chincholkar. All rights
+            reserved.</small
+          >
+        </p>
+      </div>
+      <div>
+        <ul class="social-plugins">
+          <li><a href="https://twitter.com/A_fANTAsISTA_ME">Tweet</a></li>
+          <li>
+            <a href="https://www.linkedin.com/in/amit-chincholkar-12407715b/"
+              >LinkedIn</a
+            >
+          </li>
+          <li><a href="https://github.com/fantasyRipper">GitHub</a></li>
+        </ul>
+      </div>
+    </footer>
+    <script>
+      let year = new Date().getFullYear();
+      document.querySelector(".year").textContent = year;
+    </script>
   </body>
 </html>
