--- a/index.html
+++ b/index.html
@@ -71,28 +71,26 @@
           <h2>Hi, I'm Amit</h2>
 
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima
-            deserunt doloremque enim rerum velit, praesentium temporibus.
-            Sapiente excepturi ratione voluptatem veritatis.
+            I use my passion and skills to create digital products and
+            experiences. I like to craft solid and scalable products with great
+            user experiences.
           </p>
           <p>
-            Sint veniam perferendis dolorem porro iste fugiat in obcaecati
-            commodi quia atque mollitia vel natus sapiente a assumenda, aperiam
-            ex tempore fugit debitis quibusdam suscipit? Reiciendis deserunt
-            quod aperiam voluptas sequi recusandae asperiores, enim similique
-            quo quae possimus quibusdam, tempore unde obcaecati autem ex earum
-            beatae a delectus. Odio, dolor praesentium. Temporibus dolorum sequi
-            voluptatum quas, deserunt aspernatur.
+            In building applications, I'm equipped with just the right tools,
+            and can absolutely function independently of them to deliver fast,
+            resilient solutions optimized for scale — performance and scalabilty
+            are priorities on my radar.
           </p>
           <p>
-            A debitis pariatur commodi perferendis tempora possimus itaque, quo
-            aut inventore nobis similique accusamus ipsum cumque aspernatur odit
-            distinctio eligendi ipsa quaerat? Perspiciatis.
+            Currently, I work at Bizmatics, A Harris Computer Company as a
+            Software Engineer crafting thoughtful and inclusive experiences that
+            adhere to Healthcare software standards across the US.
           </p>
           <p>
-            qui reiciendis repellat, iure accusantium temporibus doloribus
-            necessitatibus, accusamus, fuga non officiis! Odit repellat labore
-            dolorum doloremque facere?
+            I'm quietly confident, naturally curious, and perpetually working on
+            improving my chops one design problem at a time. When I'm not at the
+            computer, I'm usually rock grinding at gym, hanging out with my
+            friends and fantasies, or enjoy Anime.
           </p>
           <p>so, stay connected!</p>
           <img class="sign" src="./images/signature.png" alt="signature" />
