updated seeMyWork click

--- a/index.html
+++ b/index.html
@@ -109,7 +109,9 @@
                 experimentals.
               </p>
             </article>
-            <a href="#" class="link">See my work &rarr;</a>
+            <a href="#" class="link" onclick="alert('Working on it 😅')"
+              >See my work &rarr;</a
+            >
           </div>
           <div class="lane-right">
             <article>
