--- a/index.html
+++ b/index.html
@@ -152,13 +152,23 @@
       </div>
       <div>
         <ul class="social-plugins">
-          <li><a href="https://twitter.com/A_fANTAsISTA_ME">Tweet</a></li>
           <li>
-            <a href="https://www.linkedin.com/in/amit-chincholkar-12407715b/"
+            <a href="https://twitter.com/A_fANTAsISTA_ME" target="_blank"
+              >Tweet</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://www.linkedin.com/in/amit-chincholkar-12407715b/"
+              target="_blank"
               >LinkedIn</a
             >
           </li>
-          <li><a href="https://github.com/fantasyRipper">GitHub</a></li>
+          <li>
+            <a href="https://github.com/fantasyRipper" target="_blank"
+              >GitHub</a
+            >
+          </li>
         </ul>
       </div>
     </footer>
