update resume in footer btn

--- a/index.html
+++ b/index.html
@@ -139,7 +139,13 @@
         <a href="/" class="logo-rip footer-link" target="_self"
           >☠️<strong>RIP</strong></a
         >
-        <button type="button" class="btn-resume">Resume</button>
+        <a
+          class="btn-resume"
+          href="./docs/amit_Chincholkar_Resume.pdf.pdf"
+          target="_blank"
+        >
+          Resume
+        </a>
       </div>
       <div class="footer-text">
         <p>
